--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
     "babel-preset-env": "^1.5.1",
     "chai": "^4.0.0",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-mocha": "^4.9.0",
     "mocha": "^3.4.2"
   },
-  "dependencies": {
-    "eslint-config-airbnb-base": "^11.2.0"
-  }
+  "dependencies": {}
 }
