--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/",
     "build": "babel src/ -d dist/",
-    "build:watch": "babel --watch src/ -d dist/",
+    "watch": "nodemon src/index.js --exec babel-node",
     "test": "mocha --compilers js:babel-register \"test/**/*.js\"",
     "clean": "rm -rf ./dist",
     "eslint": "eslint ."
@@ -30,7 +30,7 @@
     "test": "./test"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.1",
@@ -39,7 +39,8 @@
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-mocha": "^4.9.0",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "nodemon": "^1.12.1"
   },
   "dependencies": {}
 }
