--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "airbnb-base",
+  "extends": "airbnb/base",
   "rules": {
     "semi": ["error", "never"],
     "max-len": ["error", 120],
